<resources>
    <string name="app_name" translatable="false">FGOHelper</string>
    <string name="app_version" translatable="false">Version 1.000</string>
    <string name="app_versioncode" translatable="false">1.0</string>
    <string name="Language" translatable="false">Language</string>
    <string name="Preferences_Lanuage" translatable="false">English</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_Sort" translatable="false">Sort</string>
    <string name="action_TestWebView" translatable="false">WebPage</string>
    <string name="Advertise_Google_Example" translatable="false">ca-app-pub-8418426477328402/5093069229</string>
    <!--ca-app-pub-3940256099942544/6300978111-->
    <string name="Advertise_Google_AD" translatable="false">ca-app-pub-8418426477328402/5093069229</string>
    <string name="Advertise_GoogleApp" translatable="false">ca-app-pub-8418426477328402~2027922183</string>
    <string name="default_notification_channel_id" translatable="false">FGOHelper~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_8Space">        </string>
    <string name="News">News</string>
    <string name="Servent">Servent</string>
    <string name="CraftEssence">Craft Essence</string>
    <string name="Event">Event</string>
    <string name="EventGuide">EvenGuide</string>
    <string name="Quset" translatable="false">Quset</string>
    <string name="Item">Item</string>
    <string name="Skill">Skill</string>
    <string name="MaterialCount">MaterialCount</string>
    <string name="radioButtonS1">Stage_1</string> <!--靈基1-->
    <string name="radioButtonS2">Stage_2</string>
    <string name="radioButtonS3">Stage_3</string>
    <string name="radioButtonS4">Stage_4</string>
    <string name="radioButtonS5">FoolDay</string>
    <string name="radioButtonS6">Cloth</string>
    <string name="title01">Skill</string>
    <string name="title01_content"></string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="LV1">LV-1</string>
    <string name="LV2">LV-2</string>
    <string name="LV3">LV-3</string>
    <string name="LV4">LV-4</string>
    <string name="LV5">LV-5</string>
    <string name="LV6">LV-6</string>
    <string name="LV7">LV-7</string>
    <string name="LV8">LV-8</string>
    <string name="LV9">LV-9</string>
    <string name="LV10">LV-10</string>
    <string name="ClassSkill_Title">Class Skill</string>
    <string name="ClassDescribe">Class_Discribe</string>
    <string name="CommandCard_Title">Command Card</string>
    <string name="StageGraphTitle">Ascension</string>
    <string name="BStageGraphTitle">Status</string>
    <string name="Class_Saber">Saber</string>
    <string name="Class_Archer">Archer</string>
    <string name="Class_Lancer">Lancer</string>
    <string name="Class_Rider">Rider</string>
    <string name="Class_Caster">Caster</string>
    <string name="Class_Assassin">Assassin</string>
    <string name="Class_Ruler">Ruler</string>
    <string name="Class_MoonCancer">MoonCancer</string>
    <string name="Class_Avenger">Avenger</string>
    <string name="Class_Shielder">Shielder</string>
    <string name="Class_Alterego">Alterego</string>
    <string name="Class_Foreinger">Foreigner</string>
    <string name="Class_Berserker">Berserker</string>
    <string name="Noble_Phantasm">Noble Phantasm</string>
    <string name="Status_Ascension_Materials">Ascension Materials</string>
    <string name="Status_Skill_Enhancement_Materials">Skill Enhancement Materials</string>
    <string name="Status_Title">Status</string>
    <string name="Status_Name">Name</string>
    <string name="Status_Class">Class</string>
    <string name="Status_No">No.</string>
    <string name="Status_Cost">Cost</string>
    <string name="Status_Rarity">Rarity</string>
    <string name="Status_Max_Lv.">Max-Lv.</string>
    <string name="Status_Atk_LV1">Atk Lv.01</string>
    <string name="Status_HP_LV1">HP Lv.01</string>
    <string name="Status_Atk_LV90">Atk Lv.90</string>
    <string name="Status_HP_LV90">HP Lv.90</string>
    <string name="Status_Atk_LV100">Atk Lv.100</string>
    <string name="Status_HP_LV100">HP Lv.100</string>
    <string name="Status_Noble_Phantasm">Noble Phantasm</string>
    <string name="Status_NP_Rank">Rank</string>
    <string name="Status_NP_Type">Type</string>
    <string name="Status_NP_Target">Target</string>
    <string name="title_activity_old_event">OldEventActivity</string>
    <string name="Status_Ascension">Ascension</string>
    <string name="Status_CostQP">Cost QP</string>
    <string name="Status_RequiredMaterials">Required Materials</string>
    <string name="Status_Count">*77</string>
    <string name="SkillDescribeTittle">Describe</string>
    <string name="SkillTargetCD_Title">Target and CD</string>
    <string name="NP_Describe">NP Describe</string>
    <string name="Ascension1">\n1st Ascension</string>
    <string name="Ascension2">\n2nd Ascension</string>
    <string name="Ascension3">\n3rd Ascension</string>
    <string name="Ascension4">\nMax Ascension</string>
    <string name="Status_Level">Level</string>
    <string name="Status_Level_12">\nLv.1→Lv.2</string>
    <string name="Status_Level_23">\nLv.2→Lv.3</string>
    <string name="Status_Level_34">\nLv.3→Lv.4</string>
    <string name="Status_Level_45">\nLv.4→Lv.5</string>
    <string name="Status_Level_56">\nLv.5→Lv.6</string>
    <string name="Status_Level_67">\nLv.6→Lv.7</string>
    <string name="Status_Level_78">\nLv.7→Lv.8</string>
    <string name="Status_Level_89">\nLv.8→Lv.9</string>
    <string name="Status_Level_90">\nLv.9→Lv.10</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_materialcoint">materialcoint</string>
    <string name="title_activity_serventactivity">serventactivity</string>
    <string name="ClassAlterDialog_Saber">Saber</string>
    <string name="ClassAlterDialog_Archer">Archer</string>
    <string name="ClassAlterDialog_Lancer">Lancer</string>
    <string name="ClassAlterDialog_Rider">Rider</string>
    <string name="ClassAlterDialog_Caster">Caster</string>
    <string name="ClassAlterDialog_Assassin">Assassin</string>
    <string name="ClassAlterDialog_Berserker">Berserker</string>
    <string name="ClassAlterDialog_Other">Other</string>
    <string name="NP_Overcharge">Overcharge</string>
    <string name="NP_Overcharge1">100%</string>
    <string name="NP_Overcharge2">200%</string>
    <string name="NP_Overcharge3">300%</string>
    <string name="NP_Overcharge4">400%</string>
    <string name="NP_Overcharge5">500%</string>
    <string name="Star5">★★★★★</string>
    <string name="Star4">★★★★☆</string>
    <string name="Star3">★★★☆☆</string>
    <string name="Star2">★★☆☆☆</string>
    <string name="Star1">★☆☆☆☆</string>
    <string name="ClassDialogShowTitle">Select</string>
    <string name="title_activity_servent__query___database" translatable="false">Servent_Query_Activity_Database</string>
    <string name="title_activity__query__quest" translatable="false">Activity_Query_Quest</string>


</resources>
