<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_News"
            android:icon="@drawable/icon_news"
            android:title="@string/News" />
        <item
            android:id="@+id/nav_Event"
            android:icon="@drawable/icon_news"
            android:title="@string/Event"
            />
        <item
            android:id="@+id/nav_Servent"
            android:icon="@drawable/s001"
            android:title="@string/Servent" />
        <item
            android:id="@+id/nav_CraftEssence"
            android:icon="@drawable/icon_1000"
            android:title="@string/CraftEssence" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/MaterialCount" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/icon_9010"
                android:title="Donate" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="About" />
        </menu>
    </item>

</menu>
