<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        >


        <!-- 寶具 Define-->
        <TableRow
            android:id="@+id/NPTitleRow0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/Status_NPTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="6"
                android:background="@color/colorDarkBule"
                android:text="@string/Status_Noble_Phantasm"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/NPTitleRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/table_row_last_bg"
            >

            <TextView
                android:id="@+id/Status_NPName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:text="@string/Status_Name"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/Status_NP_Rank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Status_NP_Rank"
                android:textAlignment="center"
                android:background="@drawable/table_row_start"
                />

            <TextView
                android:id="@+id/Status_NP_Target"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/Status_NP_Target"
                android:textAlignment="center"
                android:background="@drawable/table_row_start"
                />

        </TableRow>

        <TableRow
            android:id="@+id/NPTitleRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/table_row_last_bg"
            >

            <TextView
                android:id="@+id/Status_NPName_EditTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:text="@string/app_name"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/Status_Rank_EditTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/app_name"
                android:background="@drawable/table_row_start"
                />

            <TextView
                android:id="@+id/Status_Rank_Target_EditTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:background="@drawable/table_row_start"
                />
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/table_row_last_bg"
            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:text="@string/NP_Describe"
                />

            <TextView
                android:id="@+id/NP_Describe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="5"
                android:singleLine="false"
                android:background="@drawable/table_row_start"
                />

        </TableRow>

        <TableRow
            android:id="@+id/NPTitleRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp">

            <ImageView
                android:id="@+id/img_NoblePhantasm"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/NPLV_EditTextView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:text="100" />

            <TextView
                android:id="@+id/NPLV_EditTextView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:text="200" />

            <TextView
                android:id="@+id/NPLV_EditTextView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:text="300" />

            <TextView
                android:id="@+id/NPLV_EditTextView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:text="400" />

            <TextView
                android:id="@+id/NPLV_EditTextView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:text="500" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/Status_NPName_EditTextView01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:text="@string/app_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Status_Rank_EditTextView01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/Status_Rank_Target_EditTextView01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/app_name"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp">

            <ImageView
                android:id="@+id/img_NoblePhantasm01"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/NPLV_EditTextView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                />

            <TextView
                android:id="@+id/NPLV_EditTextView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                />

            <TextView
                android:id="@+id/NPLV_EditTextView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                />

            <TextView
                android:id="@+id/NPLV_EditTextView14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                />

            <TextView
                android:id="@+id/NPLV_EditTextView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                />
        </TableRow>



    </TableLayout>

</LinearLayout>
